--- a/funny/src/main/res/values/strings.xml
+++ b/funny/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">funny</string>
+    <string name="bottom_navi_title_1">首页</string>
+    <string name="bottom_navi_title_2">划一划</string>
+    <string name="bottom_navi_title_4">消息</string>
+    <string name="bottom_navi_title_5">我的</string>
+
+    <string name="attention">关注</string>
+    <string name="recommend">推荐</string>
+    <!--<string name="fresh">新鲜</string>
+    <string name="only_text">纯文</string>
+    <string name="only_img">趣图</string>-->
+
 </resources>
