--- a/funny/src/main/res/values/strings.xml
+++ b/funny/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="attention">关注</string>
     <string name="recommend">推荐</string>
+    <string name="empty_data_tips">暂无数据</string>
     <!--<string name="fresh">新鲜</string>
     <string name="only_text">纯文</string>
     <string name="only_img">趣图</string>-->
